test/classes/initializers/phase1/useAfterInit/passThisFn.good
passThisFn.chpl:10: In initializer:
passThisFn.chpl:15: error: cannot call a method on a record before this.complete()
